y.output
   0  $accept : program $end

   1  program : program S
   2          | program function
   3          |

   4  function : type ID '(' para ')' '{' stat '}'
   5           | KVOID ID '(' para ')' '{' stat '}'

   6  function_var : ID '(' lots_of_expression_var ')'
   7               | ID '(' ')'

   8  stat : ID '=' expression ';' stat
   9       | ID '[' expression ']' stat_element_dim '=' expression ';' stat
  10       |
  11       | ID '=' function_var ';' stat
  12       | function_var ';' stat
  13       | S stat

  14  stat_element_dim : '[' expression ']'
  15                   |

  16  para : para ',' para_style
  17       | para_style
  18       |

  19  para_style : type ID
  20             | type ID '[' INT ']' dim

  21  S : type lots_of_type ';'
  22    | KCONST type lots_of_const_type ';'

  23  dim : '[' INT ']' dim
  24      |

  25  array_init : '=' '{' array_element '}'
  26             |

  27  array_element : array_element ',' expression
  28                |
  29                | expression

  30  lots_of_type : lots_of_type ',' type_init
  31               | type_init

  32  lots_of_const_type : lots_of_const_type ',' const_type_init
  33                     | const_type_init

  34  const_type_init : ID '=' expression
  35                  | ID

  36  type_init : ID '=' expression
  37            | ID
  38            | ID '[' INT ']' dim array_init

  39  type : KINT
  40       | KDOUBLE
  41       | KCHAR
  42       | KBOOL

  43  lots_of_expression_var : expression_var ',' lots_of_expression_var
  44                         | expression_var

  45  lots_of_expression : expression ',' lots_of_expression
  46                     | expression

  47  expression_var : '(' expression_var ')'
  48                 | expression_var DOUBLE_PLUS
  49                 | expression_var DOUBLE_MINUS
  50                 | expression_var '+' expression_var
  51                 | expression_var '-' expression_var
  52                 | expression_var '*' expression_var
  53                 | expression_var '/' expression_var
  54                 | expression_var '%' expression_var
  55                 | expression_var COMPARE expression_var
  56                 | expression_var AND expression_var
  57                 | expression_var OR expression_var
  58                 | '!' expression_var
  59                 | CHAR
  60                 | STRING
  61                 | KFALSE
  62                 | KTRUE
  63                 | UNUM
  64                 | ID
  65                 | ID '[' expression ']' stat_element_dim
  66                 | function_var

  67  expression : '(' expression ')'
  68             | expression DOUBLE_PLUS
  69             | expression DOUBLE_MINUS
  70             | expression '+' expression
  71             | expression '-' expression
  72             | expression '*' expression
  73             | expression '/' expression
  74             | expression '%' expression
  75             | expression COMPARE expression
  76             | expression AND expression
  77             | expression OR expression
  78             | '!' expression
  79             | CHAR
  80             | STRING
  81             | KFALSE
  82             | KTRUE
  83             | UNUM
  84             | ID

  85  UNUM : '+' NUM
  86       | '-' NUM
  87       | NUM

  88  NUM : INT
  89      | DOUBLE

state 0
	$accept : . program $end  (0)
	program : .  (3)

	.  reduce 3

	program  goto 1


state 1
	$accept : program . $end  (0)
	program : program . S  (1)
	program : program . function  (2)

	$end  accept
	KVOID  shift 2
	KINT  shift 3
	KDOUBLE  shift 4
	KBOOL  shift 5
	KCHAR  shift 6
	KCONST  shift 7
	.  error

	S  goto 8
	function  goto 9
	type  goto 10


state 2
	function : KVOID . ID '(' para ')' '{' stat '}'  (5)

	ID  shift 11
	.  error


state 3
	type : KINT .  (39)

	.  reduce 39


state 4
	type : KDOUBLE .  (40)

	.  reduce 40


state 5
	type : KBOOL .  (42)

	.  reduce 42


state 6
	type : KCHAR .  (41)

	.  reduce 41


state 7
	S : KCONST . type lots_of_const_type ';'  (22)

	KINT  shift 3
	KDOUBLE  shift 4
	KBOOL  shift 5
	KCHAR  shift 6
	.  error

	type  goto 12


state 8
	program : program S .  (1)

	.  reduce 1


state 9
	program : program function .  (2)

	.  reduce 2


state 10
	function : type . ID '(' para ')' '{' stat '}'  (4)
	S : type . lots_of_type ';'  (21)

	ID  shift 13
	.  error

	lots_of_type  goto 14
	type_init  goto 15


state 11
	function : KVOID ID . '(' para ')' '{' stat '}'  (5)

	'('  shift 16
	.  error


state 12
	S : KCONST type . lots_of_const_type ';'  (22)

	ID  shift 17
	.  error

	lots_of_const_type  goto 18
	const_type_init  goto 19


state 13
	function : type ID . '(' para ')' '{' stat '}'  (4)
	type_init : ID . '=' expression  (36)
	type_init : ID .  (37)
	type_init : ID . '[' INT ']' dim array_init  (38)

	'['  shift 20
	'('  shift 21
	'='  shift 22
	';'  reduce 37
	','  reduce 37


state 14
	S : type lots_of_type . ';'  (21)
	lots_of_type : lots_of_type . ',' type_init  (30)

	';'  shift 23
	','  shift 24
	.  error


state 15
	lots_of_type : type_init .  (31)

	.  reduce 31


state 16
	function : KVOID ID '(' . para ')' '{' stat '}'  (5)
	para : .  (18)

	KINT  shift 3
	KDOUBLE  shift 4
	KBOOL  shift 5
	KCHAR  shift 6
	')'  reduce 18
	','  reduce 18

	type  goto 25
	para  goto 26
	para_style  goto 27


state 17
	const_type_init : ID . '=' expression  (34)
	const_type_init : ID .  (35)

	'='  shift 28
	';'  reduce 35
	','  reduce 35


state 18
	S : KCONST type lots_of_const_type . ';'  (22)
	lots_of_const_type : lots_of_const_type . ',' const_type_init  (32)

	';'  shift 29
	','  shift 30
	.  error


state 19
	lots_of_const_type : const_type_init .  (33)

	.  reduce 33


state 20
	type_init : ID '[' . INT ']' dim array_init  (38)

	INT  shift 31
	.  error


state 21
	function : type ID '(' . para ')' '{' stat '}'  (4)
	para : .  (18)

	KINT  shift 3
	KDOUBLE  shift 4
	KBOOL  shift 5
	KCHAR  shift 6
	')'  reduce 18
	','  reduce 18

	type  goto 25
	para  goto 32
	para_style  goto 27


state 22
	type_init : ID '=' . expression  (36)

	KTRUE  shift 33
	KFALSE  shift 34
	ID  shift 35
	INT  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STRING  shift 39
	'!'  shift 40
	'+'  shift 41
	'-'  shift 42
	'('  shift 43
	.  error

	expression  goto 44
	UNUM  goto 45
	NUM  goto 46


state 23
	S : type lots_of_type ';' .  (21)

	.  reduce 21


state 24
	lots_of_type : lots_of_type ',' . type_init  (30)

	ID  shift 47
	.  error

	type_init  goto 48


state 25
	para_style : type . ID  (19)
	para_style : type . ID '[' INT ']' dim  (20)

	ID  shift 49
	.  error


state 26
	function : KVOID ID '(' para . ')' '{' stat '}'  (5)
	para : para . ',' para_style  (16)

	')'  shift 50
	','  shift 51
	.  error


state 27
	para : para_style .  (17)

	.  reduce 17


state 28
	const_type_init : ID '=' . expression  (34)

	KTRUE  shift 33
	KFALSE  shift 34
	ID  shift 35
	INT  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STRING  shift 39
	'!'  shift 40
	'+'  shift 41
	'-'  shift 42
	'('  shift 43
	.  error

	expression  goto 52
	UNUM  goto 45
	NUM  goto 46


state 29
	S : KCONST type lots_of_const_type ';' .  (22)

	.  reduce 22


state 30
	lots_of_const_type : lots_of_const_type ',' . const_type_init  (32)

	ID  shift 17
	.  error

	const_type_init  goto 53


state 31
	type_init : ID '[' INT . ']' dim array_init  (38)

	']'  shift 54
	.  error


state 32
	function : type ID '(' para . ')' '{' stat '}'  (4)
	para : para . ',' para_style  (16)

	')'  shift 55
	','  shift 51
	.  error


state 33
	expression : KTRUE .  (82)

	.  reduce 82


state 34
	expression : KFALSE .  (81)

	.  reduce 81


state 35
	expression : ID .  (84)

	.  reduce 84


state 36
	NUM : INT .  (88)

	.  reduce 88


state 37
	NUM : DOUBLE .  (89)

	.  reduce 89


state 38
	expression : CHAR .  (79)

	.  reduce 79


state 39
	expression : STRING .  (80)

	.  reduce 80


state 40
	expression : '!' . expression  (78)

	KTRUE  shift 33
	KFALSE  shift 34
	ID  shift 35
	INT  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STRING  shift 39
	'!'  shift 40
	'+'  shift 41
	'-'  shift 42
	'('  shift 43
	.  error

	expression  goto 56
	UNUM  goto 45
	NUM  goto 46


state 41
	UNUM : '+' . NUM  (85)

	INT  shift 36
	DOUBLE  shift 37
	.  error

	NUM  goto 57


state 42
	UNUM : '-' . NUM  (86)

	INT  shift 36
	DOUBLE  shift 37
	.  error

	NUM  goto 58


state 43
	expression : '(' . expression ')'  (67)

	KTRUE  shift 33
	KFALSE  shift 34
	ID  shift 35
	INT  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STRING  shift 39
	'!'  shift 40
	'+'  shift 41
	'-'  shift 42
	'('  shift 43
	.  error

	expression  goto 59
	UNUM  goto 45
	NUM  goto 46


state 44
	type_init : ID '=' expression .  (36)
	expression : expression . DOUBLE_PLUS  (68)
	expression : expression . DOUBLE_MINUS  (69)
	expression : expression . '+' expression  (70)
	expression : expression . '-' expression  (71)
	expression : expression . '*' expression  (72)
	expression : expression . '/' expression  (73)
	expression : expression . '%' expression  (74)
	expression : expression . COMPARE expression  (75)
	expression : expression . AND expression  (76)
	expression : expression . OR expression  (77)

	COMPARE  shift 60
	DOUBLE_MINUS  shift 61
	DOUBLE_PLUS  shift 62
	AND  shift 63
	OR  shift 64
	'+'  shift 65
	'-'  shift 66
	'*'  shift 67
	'/'  shift 68
	'%'  shift 69
	';'  reduce 36
	','  reduce 36


state 45
	expression : UNUM .  (83)

	.  reduce 83


state 46
	UNUM : NUM .  (87)

	.  reduce 87


state 47
	type_init : ID . '=' expression  (36)
	type_init : ID .  (37)
	type_init : ID . '[' INT ']' dim array_init  (38)

	'['  shift 20
	'='  shift 22
	';'  reduce 37
	','  reduce 37


state 48
	lots_of_type : lots_of_type ',' type_init .  (30)

	.  reduce 30


state 49
	para_style : type ID .  (19)
	para_style : type ID . '[' INT ']' dim  (20)

	'['  shift 70
	')'  reduce 19
	','  reduce 19


state 50
	function : KVOID ID '(' para ')' . '{' stat '}'  (5)

	'{'  shift 71
	.  error


state 51
	para : para ',' . para_style  (16)

	KINT  shift 3
	KDOUBLE  shift 4
	KBOOL  shift 5
	KCHAR  shift 6
	.  error

	type  goto 25
	para_style  goto 72


state 52
	const_type_init : ID '=' expression .  (34)
	expression : expression . DOUBLE_PLUS  (68)
	expression : expression . DOUBLE_MINUS  (69)
	expression : expression . '+' expression  (70)
	expression : expression . '-' expression  (71)
	expression : expression . '*' expression  (72)
	expression : expression . '/' expression  (73)
	expression : expression . '%' expression  (74)
	expression : expression . COMPARE expression  (75)
	expression : expression . AND expression  (76)
	expression : expression . OR expression  (77)

	COMPARE  shift 60
	DOUBLE_MINUS  shift 61
	DOUBLE_PLUS  shift 62
	AND  shift 63
	OR  shift 64
	'+'  shift 65
	'-'  shift 66
	'*'  shift 67
	'/'  shift 68
	'%'  shift 69
	';'  reduce 34
	','  reduce 34


state 53
	lots_of_const_type : lots_of_const_type ',' const_type_init .  (32)

	.  reduce 32


state 54
	type_init : ID '[' INT ']' . dim array_init  (38)
	dim : .  (24)

	'['  shift 73
	'='  reduce 24
	';'  reduce 24
	','  reduce 24

	dim  goto 74


state 55
	function : type ID '(' para ')' . '{' stat '}'  (4)

	'{'  shift 75
	.  error


state 56
	expression : expression . DOUBLE_PLUS  (68)
	expression : expression . DOUBLE_MINUS  (69)
	expression : expression . '+' expression  (70)
	expression : expression . '-' expression  (71)
	expression : expression . '*' expression  (72)
	expression : expression . '/' expression  (73)
	expression : expression . '%' expression  (74)
	expression : expression . COMPARE expression  (75)
	expression : expression . AND expression  (76)
	expression : expression . OR expression  (77)
	expression : '!' expression .  (78)

	COMPARE  shift 60
	DOUBLE_MINUS  shift 61
	DOUBLE_PLUS  shift 62
	'+'  shift 65
	'-'  shift 66
	'*'  shift 67
	'/'  shift 68
	'%'  shift 69
	AND  reduce 78
	OR  reduce 78
	']'  reduce 78
	')'  reduce 78
	'}'  reduce 78
	';'  reduce 78
	','  reduce 78


state 57
	UNUM : '+' NUM .  (85)

	.  reduce 85


state 58
	UNUM : '-' NUM .  (86)

	.  reduce 86


state 59
	expression : '(' expression . ')'  (67)
	expression : expression . DOUBLE_PLUS  (68)
	expression : expression . DOUBLE_MINUS  (69)
	expression : expression . '+' expression  (70)
	expression : expression . '-' expression  (71)
	expression : expression . '*' expression  (72)
	expression : expression . '/' expression  (73)
	expression : expression . '%' expression  (74)
	expression : expression . COMPARE expression  (75)
	expression : expression . AND expression  (76)
	expression : expression . OR expression  (77)

	COMPARE  shift 60
	DOUBLE_MINUS  shift 61
	DOUBLE_PLUS  shift 62
	AND  shift 63
	OR  shift 64
	'+'  shift 65
	'-'  shift 66
	'*'  shift 67
	'/'  shift 68
	'%'  shift 69
	')'  shift 76
	.  error


state 60
	expression : expression COMPARE . expression  (75)

	KTRUE  shift 33
	KFALSE  shift 34
	ID  shift 35
	INT  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STRING  shift 39
	'!'  shift 40
	'+'  shift 41
	'-'  shift 42
	'('  shift 43
	.  error

	expression  goto 77
	UNUM  goto 45
	NUM  goto 46


state 61
	expression : expression DOUBLE_MINUS .  (69)

	.  reduce 69


state 62
	expression : expression DOUBLE_PLUS .  (68)

	.  reduce 68


state 63
	expression : expression AND . expression  (76)

	KTRUE  shift 33
	KFALSE  shift 34
	ID  shift 35
	INT  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STRING  shift 39
	'!'  shift 40
	'+'  shift 41
	'-'  shift 42
	'('  shift 43
	.  error

	expression  goto 78
	UNUM  goto 45
	NUM  goto 46


state 64
	expression : expression OR . expression  (77)

	KTRUE  shift 33
	KFALSE  shift 34
	ID  shift 35
	INT  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STRING  shift 39
	'!'  shift 40
	'+'  shift 41
	'-'  shift 42
	'('  shift 43
	.  error

	expression  goto 79
	UNUM  goto 45
	NUM  goto 46


state 65
	expression : expression '+' . expression  (70)

	KTRUE  shift 33
	KFALSE  shift 34
	ID  shift 35
	INT  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STRING  shift 39
	'!'  shift 40
	'+'  shift 41
	'-'  shift 42
	'('  shift 43
	.  error

	expression  goto 80
	UNUM  goto 45
	NUM  goto 46


state 66
	expression : expression '-' . expression  (71)

	KTRUE  shift 33
	KFALSE  shift 34
	ID  shift 35
	INT  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STRING  shift 39
	'!'  shift 40
	'+'  shift 41
	'-'  shift 42
	'('  shift 43
	.  error

	expression  goto 81
	UNUM  goto 45
	NUM  goto 46


state 67
	expression : expression '*' . expression  (72)

	KTRUE  shift 33
	KFALSE  shift 34
	ID  shift 35
	INT  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STRING  shift 39
	'!'  shift 40
	'+'  shift 41
	'-'  shift 42
	'('  shift 43
	.  error

	expression  goto 82
	UNUM  goto 45
	NUM  goto 46


state 68
	expression : expression '/' . expression  (73)

	KTRUE  shift 33
	KFALSE  shift 34
	ID  shift 35
	INT  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STRING  shift 39
	'!'  shift 40
	'+'  shift 41
	'-'  shift 42
	'('  shift 43
	.  error

	expression  goto 83
	UNUM  goto 45
	NUM  goto 46


state 69
	expression : expression '%' . expression  (74)

	KTRUE  shift 33
	KFALSE  shift 34
	ID  shift 35
	INT  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STRING  shift 39
	'!'  shift 40
	'+'  shift 41
	'-'  shift 42
	'('  shift 43
	.  error

	expression  goto 84
	UNUM  goto 45
	NUM  goto 46


state 70
	para_style : type ID '[' . INT ']' dim  (20)

	INT  shift 85
	.  error


state 71
	function : KVOID ID '(' para ')' '{' . stat '}'  (5)
	stat : .  (10)

	KINT  shift 3
	KDOUBLE  shift 4
	KBOOL  shift 5
	KCHAR  shift 6
	KCONST  shift 7
	ID  shift 86
	'}'  reduce 10

	S  goto 87
	type  goto 88
	stat  goto 89
	function_var  goto 90


state 72
	para : para ',' para_style .  (16)

	.  reduce 16


state 73
	dim : '[' . INT ']' dim  (23)

	INT  shift 91
	.  error


state 74
	type_init : ID '[' INT ']' dim . array_init  (38)
	array_init : .  (26)

	'='  shift 92
	';'  reduce 26
	','  reduce 26

	array_init  goto 93


state 75
	function : type ID '(' para ')' '{' . stat '}'  (4)
	stat : .  (10)

	KINT  shift 3
	KDOUBLE  shift 4
	KBOOL  shift 5
	KCHAR  shift 6
	KCONST  shift 7
	ID  shift 86
	'}'  reduce 10

	S  goto 87
	type  goto 88
	stat  goto 94
	function_var  goto 90


state 76
	expression : '(' expression ')' .  (67)

	.  reduce 67


state 77
	expression : expression . DOUBLE_PLUS  (68)
	expression : expression . DOUBLE_MINUS  (69)
	expression : expression . '+' expression  (70)
	expression : expression . '-' expression  (71)
	expression : expression . '*' expression  (72)
	expression : expression . '/' expression  (73)
	expression : expression . '%' expression  (74)
	expression : expression . COMPARE expression  (75)
	expression : expression COMPARE expression .  (75)
	expression : expression . AND expression  (76)
	expression : expression . OR expression  (77)

	DOUBLE_MINUS  shift 61
	DOUBLE_PLUS  shift 62
	'+'  shift 65
	'-'  shift 66
	'*'  shift 67
	'/'  shift 68
	'%'  shift 69
	COMPARE  reduce 75
	AND  reduce 75
	OR  reduce 75
	']'  reduce 75
	')'  reduce 75
	'}'  reduce 75
	';'  reduce 75
	','  reduce 75


state 78
	expression : expression . DOUBLE_PLUS  (68)
	expression : expression . DOUBLE_MINUS  (69)
	expression : expression . '+' expression  (70)
	expression : expression . '-' expression  (71)
	expression : expression . '*' expression  (72)
	expression : expression . '/' expression  (73)
	expression : expression . '%' expression  (74)
	expression : expression . COMPARE expression  (75)
	expression : expression . AND expression  (76)
	expression : expression AND expression .  (76)
	expression : expression . OR expression  (77)

	COMPARE  shift 60
	DOUBLE_MINUS  shift 61
	DOUBLE_PLUS  shift 62
	'+'  shift 65
	'-'  shift 66
	'*'  shift 67
	'/'  shift 68
	'%'  shift 69
	AND  reduce 76
	OR  reduce 76
	']'  reduce 76
	')'  reduce 76
	'}'  reduce 76
	';'  reduce 76
	','  reduce 76


state 79
	expression : expression . DOUBLE_PLUS  (68)
	expression : expression . DOUBLE_MINUS  (69)
	expression : expression . '+' expression  (70)
	expression : expression . '-' expression  (71)
	expression : expression . '*' expression  (72)
	expression : expression . '/' expression  (73)
	expression : expression . '%' expression  (74)
	expression : expression . COMPARE expression  (75)
	expression : expression . AND expression  (76)
	expression : expression . OR expression  (77)
	expression : expression OR expression .  (77)

	COMPARE  shift 60
	DOUBLE_MINUS  shift 61
	DOUBLE_PLUS  shift 62
	AND  shift 63
	'+'  shift 65
	'-'  shift 66
	'*'  shift 67
	'/'  shift 68
	'%'  shift 69
	OR  reduce 77
	']'  reduce 77
	')'  reduce 77
	'}'  reduce 77
	';'  reduce 77
	','  reduce 77


state 80
	expression : expression . DOUBLE_PLUS  (68)
	expression : expression . DOUBLE_MINUS  (69)
	expression : expression . '+' expression  (70)
	expression : expression '+' expression .  (70)
	expression : expression . '-' expression  (71)
	expression : expression . '*' expression  (72)
	expression : expression . '/' expression  (73)
	expression : expression . '%' expression  (74)
	expression : expression . COMPARE expression  (75)
	expression : expression . AND expression  (76)
	expression : expression . OR expression  (77)

	DOUBLE_MINUS  shift 61
	DOUBLE_PLUS  shift 62
	'*'  shift 67
	'/'  shift 68
	'%'  shift 69
	COMPARE  reduce 70
	AND  reduce 70
	OR  reduce 70
	'+'  reduce 70
	'-'  reduce 70
	']'  reduce 70
	')'  reduce 70
	'}'  reduce 70
	';'  reduce 70
	','  reduce 70


state 81
	expression : expression . DOUBLE_PLUS  (68)
	expression : expression . DOUBLE_MINUS  (69)
	expression : expression . '+' expression  (70)
	expression : expression . '-' expression  (71)
	expression : expression '-' expression .  (71)
	expression : expression . '*' expression  (72)
	expression : expression . '/' expression  (73)
	expression : expression . '%' expression  (74)
	expression : expression . COMPARE expression  (75)
	expression : expression . AND expression  (76)
	expression : expression . OR expression  (77)

	DOUBLE_MINUS  shift 61
	DOUBLE_PLUS  shift 62
	'*'  shift 67
	'/'  shift 68
	'%'  shift 69
	COMPARE  reduce 71
	AND  reduce 71
	OR  reduce 71
	'+'  reduce 71
	'-'  reduce 71
	']'  reduce 71
	')'  reduce 71
	'}'  reduce 71
	';'  reduce 71
	','  reduce 71


state 82
	expression : expression . DOUBLE_PLUS  (68)
	expression : expression . DOUBLE_MINUS  (69)
	expression : expression . '+' expression  (70)
	expression : expression . '-' expression  (71)
	expression : expression . '*' expression  (72)
	expression : expression '*' expression .  (72)
	expression : expression . '/' expression  (73)
	expression : expression . '%' expression  (74)
	expression : expression . COMPARE expression  (75)
	expression : expression . AND expression  (76)
	expression : expression . OR expression  (77)

	DOUBLE_MINUS  shift 61
	DOUBLE_PLUS  shift 62
	COMPARE  reduce 72
	AND  reduce 72
	OR  reduce 72
	'+'  reduce 72
	'-'  reduce 72
	'*'  reduce 72
	'/'  reduce 72
	'%'  reduce 72
	']'  reduce 72
	')'  reduce 72
	'}'  reduce 72
	';'  reduce 72
	','  reduce 72


state 83
	expression : expression . DOUBLE_PLUS  (68)
	expression : expression . DOUBLE_MINUS  (69)
	expression : expression . '+' expression  (70)
	expression : expression . '-' expression  (71)
	expression : expression . '*' expression  (72)
	expression : expression . '/' expression  (73)
	expression : expression '/' expression .  (73)
	expression : expression . '%' expression  (74)
	expression : expression . COMPARE expression  (75)
	expression : expression . AND expression  (76)
	expression : expression . OR expression  (77)

	DOUBLE_MINUS  shift 61
	DOUBLE_PLUS  shift 62
	COMPARE  reduce 73
	AND  reduce 73
	OR  reduce 73
	'+'  reduce 73
	'-'  reduce 73
	'*'  reduce 73
	'/'  reduce 73
	'%'  reduce 73
	']'  reduce 73
	')'  reduce 73
	'}'  reduce 73
	';'  reduce 73
	','  reduce 73


state 84
	expression : expression . DOUBLE_PLUS  (68)
	expression : expression . DOUBLE_MINUS  (69)
	expression : expression . '+' expression  (70)
	expression : expression . '-' expression  (71)
	expression : expression . '*' expression  (72)
	expression : expression . '/' expression  (73)
	expression : expression . '%' expression  (74)
	expression : expression '%' expression .  (74)
	expression : expression . COMPARE expression  (75)
	expression : expression . AND expression  (76)
	expression : expression . OR expression  (77)

	DOUBLE_MINUS  shift 61
	DOUBLE_PLUS  shift 62
	COMPARE  reduce 74
	AND  reduce 74
	OR  reduce 74
	'+'  reduce 74
	'-'  reduce 74
	'*'  reduce 74
	'/'  reduce 74
	'%'  reduce 74
	']'  reduce 74
	')'  reduce 74
	'}'  reduce 74
	';'  reduce 74
	','  reduce 74


state 85
	para_style : type ID '[' INT . ']' dim  (20)

	']'  shift 95
	.  error


state 86
	function_var : ID . '(' lots_of_expression_var ')'  (6)
	function_var : ID . '(' ')'  (7)
	stat : ID . '=' expression ';' stat  (8)
	stat : ID . '[' expression ']' stat_element_dim '=' expression ';' stat  (9)
	stat : ID . '=' function_var ';' stat  (11)

	'['  shift 96
	'('  shift 97
	'='  shift 98
	.  error


state 87
	stat : S . stat  (13)
	stat : .  (10)

	KINT  shift 3
	KDOUBLE  shift 4
	KBOOL  shift 5
	KCHAR  shift 6
	KCONST  shift 7
	ID  shift 86
	'}'  reduce 10

	S  goto 87
	type  goto 88
	stat  goto 99
	function_var  goto 90


state 88
	S : type . lots_of_type ';'  (21)

	ID  shift 47
	.  error

	lots_of_type  goto 14
	type_init  goto 15


state 89
	function : KVOID ID '(' para ')' '{' stat . '}'  (5)

	'}'  shift 100
	.  error


state 90
	stat : function_var . ';' stat  (12)

	';'  shift 101
	.  error


state 91
	dim : '[' INT . ']' dim  (23)

	']'  shift 102
	.  error


state 92
	array_init : '=' . '{' array_element '}'  (25)

	'{'  shift 103
	.  error


state 93
	type_init : ID '[' INT ']' dim array_init .  (38)

	.  reduce 38


state 94
	function : type ID '(' para ')' '{' stat . '}'  (4)

	'}'  shift 104
	.  error


state 95
	para_style : type ID '[' INT ']' . dim  (20)
	dim : .  (24)

	'['  shift 73
	')'  reduce 24
	','  reduce 24

	dim  goto 105


state 96
	stat : ID '[' . expression ']' stat_element_dim '=' expression ';' stat  (9)

	KTRUE  shift 33
	KFALSE  shift 34
	ID  shift 35
	INT  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STRING  shift 39
	'!'  shift 40
	'+'  shift 41
	'-'  shift 42
	'('  shift 43
	.  error

	expression  goto 106
	UNUM  goto 45
	NUM  goto 46


state 97
	function_var : ID '(' . lots_of_expression_var ')'  (6)
	function_var : ID '(' . ')'  (7)

	KTRUE  shift 107
	KFALSE  shift 108
	ID  shift 109
	INT  shift 36
	DOUBLE  shift 37
	CHAR  shift 110
	STRING  shift 111
	'!'  shift 112
	'+'  shift 41
	'-'  shift 42
	'('  shift 113
	')'  shift 114
	.  error

	function_var  goto 115
	lots_of_expression_var  goto 116
	expression_var  goto 117
	UNUM  goto 118
	NUM  goto 46


state 98
	stat : ID '=' . expression ';' stat  (8)
	stat : ID '=' . function_var ';' stat  (11)

	KTRUE  shift 33
	KFALSE  shift 34
	ID  shift 119
	INT  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STRING  shift 39
	'!'  shift 40
	'+'  shift 41
	'-'  shift 42
	'('  shift 43
	.  error

	function_var  goto 120
	expression  goto 121
	UNUM  goto 45
	NUM  goto 46


state 99
	stat : S stat .  (13)

	.  reduce 13


state 100
	function : KVOID ID '(' para ')' '{' stat '}' .  (5)

	.  reduce 5


state 101
	stat : function_var ';' . stat  (12)
	stat : .  (10)
